Adding dockerfile